--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
         <style>
             body {
                 padding: 15px;
-                background: #E2E5D3;
+                background: #EFEFEF;
                 color:#000;
                 font-family: Georgia, Helvetica, Arial, sans-serif;
             }
