--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
                 padding: 15px;
                 background: #EFEFEF;
                 color:#000;
-                font-family: Georgia, Helvetica, Arial, sans-serif;
+                font-family: Helvetica, Arial, sans-serif;
             }
             img {
                 width: 100%;
